--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <link rel="stylesheet" href="index.css">
     </head>
-    <body>
-        <input type="text" id="input-el">
-        <button id="input-btn">SAVE INPUT</button>
-        <button id="tab-btn">SAVE TAB</button>
-        <button id="delete-btn">DELETE ALL</button>
-        <ul id="ul-el">
+    <body id="body">
+        <h1 id="h1"> Link Saver </h1>
+        <input type="text" id="input-el" class="color">
+        <button id="input-btn" class="background">SAVE INPUT</button>
+        <button id="tab-btn" class="background">SAVE TAB</button>
+        <button id="delete-btn" class="color">DELETE ALL</button>
+        <div>
+            <button id="color-btn" class="color">CHANGE COLOR</button>
+
+        </div>
+        <ul id="ul-el" class="color">
         </ul>
         <script src="index.js"></script>
     </body>
